<resources>
    <string name="app_name" translatable="false">Calculadora</string>
    <string name="resultado">Resultado</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="restar">Restar</string>
    <string name="sumar">Sumar</string>
    <string name="n_mero_2">Número 2</string>
    <string name="n_mero_1">Número 1</string>
</resources>
